# python-pptx

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  HISTORY.rst  Hoc_ngu_phap_tieng_Nhat_Minna_no_Nihongo.pptx in the current directory.  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  PP.pptx  Pipfile  README.archive  README.md  README.rst  export.py  files.txt  gen_oxml_classes.py  pptx_file  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  run.py  setup.py  test.pptx  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
AysFiles/: 01_titleSubtitle.py  02_Charts.py  03_Table.py  04_Image.py  05_Draft.py  06_ChangeOldTables.py  07_01_GetAllCahrsDetailInpptx.py  07_ChangeOldCharts.py  draft.py
doc/: Makefile  conf.py  index.rst  modules.rst  pptx.rst  relationships.rst  resources.rst
doc/developer/: development_practices.rst  index.rst
doc/modules/: index.rst  presentation.rst  presentation_internals.rst  spec.rst  util.rst
doc/protocols/: index.rst  parts.rst  placeholder.rst  text.rst
doc/resources/: applescript.rst  design_narratives.rst  development_practices.rst  index.rst  odds_and_ends.rst  python_packaging.rst  schema_analysis.rst  web_resources.rst
doc/user/: examples.rst  index.rst
docs/: Makefile  conf.py  index.rst
docs/_templates/: sidebarlinks.html
docs/api/: action.rst  chart-data.rst  chart.rst  dml.rst  exc.rst  image.rst  placeholders.rst  presentation.rst  shapes.rst  slides.rst  table.rst  text.rst  util.rst
docs/community/: support.rst  updates.rst
docs/dev/: index.rst  philosophy.rst  runtests.rst  xmlchemy.rst
docs/user/: autoshape-types.rst  autoshapes.rst  charts.rst  concepts.rst  install.rst  intro.rst  notes.rst  placeholders-understanding.rst  placeholders-using.rst  placeholders.rst  presentations.rst  quickstart.rst  shapes.rst  slides.rst  table.rst  text.rst  understanding-shapes.rst  use-cases.rst
features/: 01-round-trip.feature  02-add-slide.feature  03-add-picture.feature  03-placeholder-text.feature  04-default-template.feature  05-add-picture.feature  07-add-table.feature  09-text-properties.feature  10-cell-properties.feature  11-table-properties.feature  12-shape-adjustments.feature  13-core-doc-props.feature  act-action-props.feature  act-action.feature  act-hyperlink-props.feature  act-hyperlink.feature  act-props.feature  cht-access-axes.feature  cht-axis-props.feature  cht-axis-title.feature  cht-axistitle-props.feature  cht-category-access.feature  cht-category-props.feature  cht-chart-props.feature  cht-chart-title.feature  cht-chart.feature  cht-charttitle-props.feature  cht-data-props.feature  cht-datalabel-props.feature  cht-datalabels-props.feature  cht-datalabels.feature  cht-gridlines-props.feature  cht-legend-props.feature  cht-legend.feature  cht-marker-props.feature  cht-plot-props.feature  cht-point-access.feature  cht-point-props.feature  cht-replace-data.feature  cht-series-access.feature  (+88 more)
features/steps/: action.py  axis.py  background.py  category.py  chart.py  chartdata.py  color.py  coreprops.py  datalabel.py  effect.py  fill.py  font.py  font_color.py  helpers.py  legend.py  line.py  picture.py  placeholder.py  plot.py  presentation.py  prs_steps.py  series.py  shape.py  shapes.py  shapetree.py  slide.py  slidelayout.py  slidemaster.py  slides.py  step_coreprops.py  step_font_color.py  step_picture.py  step_placeholder.py  step_presentation.py  step_shape.py  step_slide.py  step_table.py  step_text.py  table.py  text.py  (+2 more)
lab/: README.txt
lab/cust-elm-classes/: gen_oxml_classes.py  main.py
lab/parse_xsd/: objectify_lab.py  parse_xsd.py  slide1.xml  validate.py
lab/pptx2geo/: pptx2geo.py
pptx/: __init__.py  action.py  api.py  autoshape.py  constants.py  exc.py  image.py  media.py  opc_constants.py  oxml.py  package.py  packaging.py  part.py  picture.py  presentation.py  rels.py  shape.py  shapes.py  shapetree.py  shared.py  slide.py  slides.py  spec.py  table.py  text.py  theme.py  util.py
pptx/chart/: axis.py  category.py  chart.py  data.py  datalabel.py  legend.py  marker.py  plot.py  point.py  series.py  title.py  xlsx.py  xmlwriter.py
pptx/compat/: __init__.py  python2.py  python3.py
pptx/dml/: border.py  chtfmt.py  color.py  core.py  effect.py  fill.py  line.py  preset_colors.py
pptx/enum/: __init__.py  action.py  base.py  chart.py  dml.py  shapes.py  text.py
pptx/opc/: constants.py  customprops.py  oxml.py  package.py  packaging.py  packuri.py  phys_pkg.py  pkgreader.py  pkgwriter.py  rels.py  serialized.py  shared.py  spec.py
pptx/oxml/: __init__.py  action.py  autoshape.py  core.py  coreprops.py  customprops.py  dml.py  graphfrm.py  media.py  ns.py  picture.py  presentation.py  shape.py  shapetree.py  shared.py  simpletypes.py  slide.py  slidelayout.py  table.py  (+5 more)
scripts/: unpack-pptx.py
test/: context.py  test_oxml.py  test_packaging.py  test_presentation.py  test_shapes.py  test_spec.py  test_util.py  testdata.py  testing.py
tests/: test_action.py  test_api.py  test_autoshape.py  test_coreprops.py  test_enum.py  test_image.py  test_media.py  test_oxml.py  test_package.py  test_packaging.py  test_part.py  test_picture.py  test_placeholder.py  test_presentation.py  test_rels.py  test_shape.py  test_shapes.py  test_shapetree.py  test_shared.py  test_slide.py  test_slides.py  test_spec.py  test_table.py  test_text.py  test_theme.py  test_util.py  test_xmlbldr.py  testdata.py  unitdata.py  unitutil.py
(+732 files in other folders)
